crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_004_MMC3_Mega_Man_6.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-004-MMC3/Mega Man 6.nes
rom_sha256=f8a92b74a81a4d66fa7d7cfeddfbe4f4b0de9b150c44373b3e14f3b04f874db6
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=1e0c258802a698a6
checkpoint f900 fb_fnv1a64=1cfcaa3c9bd3239b
checkpoint f1100 fb_fnv1a64=1cfcaa3c9bd3239b
