crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_004_MMC3_Ninja_Gaiden_II_The_Dark_Sword_of_Chaos.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-004-MMC3/Ninja Gaiden II - The Dark Sword of Chaos.nes
rom_sha256=5dde0082a8a5c95639fbf4e020fba8fa0bce8f841f9a4c55a42b1a6c7e739e73
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=2ec337cc1940b303
checkpoint f900 fb_fnv1a64=4f8d665424eb9127
checkpoint f1100 fb_fnv1a64=2d36a64c9fa4a99a
