crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_004_MMC3_Rad_Racer_II.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-004-MMC3/Rad Racer II.nes
rom_sha256=5194b2f74fe7229e434cef7455d6164bfb739db0db3fe44d4fd34bd74719faef
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=d23f627402c19aad
checkpoint f900 fb_fnv1a64=bc4a1259dff3b1f0
checkpoint f1100 fb_fnv1a64=a020d22669da36f0
