crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_004_MMC3_Rampage.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-004-MMC3/Rampage.nes
rom_sha256=dea064bd6630f69ce02e8c89823a559b4c03c130d329124146853c0e56441379
frames=1141
fb_bytes=245760
cycles=33949779
audio_samples=836505
audio_fnv1a64=2ee34580aa98fc05
checkpoint f900 fb_fnv1a64=64d4a671d66ac5ec
checkpoint f1100 fb_fnv1a64=b314277b2e49f915
