crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_004_MMC3_Super_Mario_Bros_2.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-004-MMC3/Super Mario Bros. 2.nes
rom_sha256=e0a4d3a445c23c64ffb9c7e3a910070002c8f22af24a3735a3ce708999babf6c
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=08ee116fc94a13c8
checkpoint f900 fb_fnv1a64=d3115494067b0782
checkpoint f1100 fb_fnv1a64=d3115494067b0782
