crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_004_MMC3_Tiny_Toon_Adventures_2_Trouble_in_Wackyland.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-004-MMC3/Tiny Toon Adventures 2 - Trouble in Wackyland.nes
rom_sha256=d539a6d617a3b771e4616f6331ea522ee061cbaf39def993c54024a04e8bf9ef
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=9e1559d96eab0cd3
checkpoint f900 fb_fnv1a64=d3114f01ba78d6da
checkpoint f1100 fb_fnv1a64=d3114f01ba78d6da
